--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,12 +2,14 @@
 
 admin:
   user_type_id: admin
+  username: admin
   password_digest: <%= BCrypt::Password.create('hello') %>
   first_name: root
   last_name: empty
 
 dan:
   user_type_id: member
+  username: ofer987
   password_digest: <%= BCrypt::Password.create('foo') %>
   first_name: Dan
   last_name: Ofer
